--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-charts": "^7.1.1",
     "axios": "^1.6.8",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.2.0",
