--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "sweetalert2": "^11.10.7",
     "vite-plugin-proxy": "^0.5.0"
   },
   "devDependencies": {
