--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/styles": "^5.15.15",
     "@mui/x-charts": "^7.1.1",
     "axios": "^1.6.8",
-    "http-proxy-middleware": "^3.0.0",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
