--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: prontogram-frontend
     container_name: prontogram-frontend
     ports:
-      - 4173:4173
+      - "4173:80"
     build:
       dockerfile: ./Dockerfile
     networks:
@@ -14,7 +14,6 @@ services:
 
 networks:
   prontogram-net:
-    name: prontogram-net
-    driver: bridge
+    external: true
   acmesky:
     external: true
